@@ -83,6 +83,9 @@ Library
 - Issue #4444: Allow assertRaises() to be used as a context handler, so that
   the code under test can be written inline if more practical.
 
+- Issue #4739: Add pydoc help topics for symbols, so that e.g. help('@')
+  works as expected in the interactive environment.
+
 - Issue #4756: zipfile.is_zipfile() now supports file-like objects. Patch by
   Gabriel Genellina.
 
